...
                android:padding="12dp"
                android:textColor="#444444"
                android:textColorHint="#545252"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forgot_password"
...
